completed the frontend of the post page, and managed to store the values in a form. Now need to upload to databse, and also maybe adjust the picture button so that camera opens up when clicked on

--- a/app.json
+++ b/app.json
@@ -46,6 +46,12 @@
             "./assets/fonts/Rubik-SemiBold.ttf"
           ]
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "Photos of the buffet/food will be shown to others in NUS."
+        }
       ]
     ],
     "experiments": {
