--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "react-native-webview": "13.13.5",
     "react-time-picker": "^7.0.0",
     "tailwindcss": "^3.4.17",
-    "expo-image-picker": "~16.1.4"
+    "expo-image-picker": "~16.1.4",
+    "expo-camera": "~16.1.8",
+    "expo-media-library": "~17.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
