--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-webview": "13.13.5",
     "react-time-picker": "^7.0.0",
     "tailwindcss": "^3.4.17",
-    "expo-image-picker": "~16.1.4"
+    "expo-image-picker": "~16.1.4",
+    "expo-location": "~18.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
