--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@types/geojson": "^7946.0.16",
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
+    "expo-camera": "~16.1.8",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.5",
+    "expo-location": "~18.1.5",
+    "expo-media-library": "~17.1.7",
     "expo-router": "~5.0.6",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -38,6 +43,7 @@
     "react-hook-form": "^7.57.0",
     "react-native": "0.79.2",
     "react-native-appwrite": "^0.9.2",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "5.4.0",
@@ -45,12 +51,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-time-picker": "^7.0.0",
-    "tailwindcss": "^3.4.17",
-    "expo-image-picker": "~16.1.4",
-    "expo-camera": "~16.1.8",
-    "expo-media-library": "~17.1.7",
-    "expo-location": "~18.1.5"
-
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
