distance formula implemented

--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@types/geojson": "^7946.0.16",
+    "appwrite": "^18.1.1",
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
     "expo-camera": "~16.1.8",
     "expo-constants": "~17.1.6",
+    "expo-file-system": "^18.1.11",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
@@ -45,9 +47,11 @@
     "react-native-appwrite": "^0.9.2",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-time-picker": "^7.0.0",
