--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@types/geojson": "^7946.0.16",
-    "expo": "53.0.17",
+    "expo": "^53.0.20",
     "expo-blur": "~14.1.5",
-    "expo-camera": "~16.1.10",
+    "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.2",
+    "expo-image": "~2.4.0",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
     "expo-media-library": "~17.1.7",
-    "expo-router": "~5.1.3",
+    "expo-router": "~5.1.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
