--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -58,10 +59,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "jest": "~29.7.0",
+    "jest-expo": "~53.0.9",
     "typescript": "~5.8.3"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "private": true
 }
