--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "nuswasteless",
+    "scheme": "wasteless",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
@@ -21,10 +21,7 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "permissions": [
-        "android.permission.RECORD_AUDIO"
-      ],
-      "package": "com.roy.nuswasteless",
+      "package": "com.roy.wasteless",
       "intentFilters": [
         {
           "action": "VIEW",
@@ -32,9 +29,17 @@
           "data": {
             "scheme": "appwrite-callback-6837256a001912254094"
           }
+        },
+        {
+          "action": "VIEW",
+          "category": ["DEFAULT", "BROWSABLE"],
+          "data": {
+            "scheme": "wasteless"
+          }
         }
       ]
     },
+
     "web": {
       "bundler": "metro",
       "output": "static",
